--- a/taotao-manager/taotao-manager-service/pom.xml
+++ b/taotao-manager/taotao-manager-service/pom.xml
@@ -79,4 +79,17 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<!-- 配置打包时跳过测试 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<!-- 跳过测试 -->
+				<configuration>
+					<skipTests>ture</skipTests>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
